# SLM-TRAINER

./: .gitignore  LICENSE  MANIFEST.in  PYPI_UPLOAD_GUIDE.md  README.md  basic_training.py  pyproject.toml  requirements.txt  setup.py
slm_trainer/: __init__.py  trainer.py
slm_trainer/config/: __init__.py  model_configs.py  training_configs.py
slm_trainer/model/: __init__.py  attention.py  embeddings.py  gpt.py  transformer.py
slm_trainer/tokenizer/: __init__.py  tokenizer.py  trainer.py
slm_trainer/training/: __init__.py  callbacks.py  dataset.py  trainer_engine.py
slm_trainer/utils/: __init__.py  checkpoint.py  device.py  logging.py
